<?xml version="1.0"?>
<package format="2">
  <name>tmrlib</name>
  <version>1.2.0</version>
  <description>Library for tmr_driver</description>

  <author email="ken.tsai@tm-robot.com">Ken Tsai</author>
  <maintainer email="ken.tsai@tm-robot.com">Ken Tsai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
